Fix position of votes when author visibility is disabled

--- a/src/components/Note/Note.scss
+++ b/src/components/Note/Note.scss
@@ -1,4 +1,4 @@
-@import "constants/style.scss";
+@import "src/constants/style.scss";
 
 $note__border-radius: 16px;
 $note__text-margin-bottom: 9px;
@@ -141,7 +141,7 @@ $note__author-margin-left: 10px;
   height: 26px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: end;
 }
 .note__author {
   display: inline-flex;
@@ -152,6 +152,7 @@ $note__author-margin-left: 10px;
   border: 0;
   font: inherit;
   vertical-align: baseline;
+  flex-grow: 1;
 }
 
 .note__author-image {
